Adds back search with Vue

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,3 +1,4 @@
 {
+    "/dist/assets/js/app.js": "/dist/assets/js/app.js?id=ed8c20138af2480d94eb",
     "/dist/assets/css/app.css": "/dist/assets/css/app.css?id=0f17a4292426272ad784"
 }
